# libdbusmenu-qtilities

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  README.md  annotated.html  classDBusMenuExporter-members.html  classDBusMenuExporter.html  classDBusMenuImporter-members.html  classDBusMenuImporter.html  classcom_1_1canonical_1_1dbusmenu-members.html  classcom_1_1canonical_1_1dbusmenu.html  classes.html  dbusmenu-qtilities.pc.in  dbusmenuexporter_8h_source.html  dbusmenuimporter_8h_source.html  deprecated.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_prop.html  hierarchy.html  index.html  mainpage_8h_source.html  menudata.js  pages.html
.github/workflows/: build.yml
cmake/: DBusMenuQtilitiesConfig.cmake.in  FindQtDocsPathsAndTags.cmake
scripts/: DBusMenuQtilities.pc.in  Doxyfile.in  dbusmenu-qtilities.pc.in  mainpage.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_10.js  (+96 more)
src/: CMakeLists.txt  dbusmenu_export.h.in  dbusmenu_p.cpp  dbusmenu_p.h  dbusmenu_version.h.in  dbusmenuexporter.cpp  dbusmenuexporter.h  dbusmenuexporterdbus_p.cpp  dbusmenuexporterdbus_p.h  dbusmenuexporterprivate_p.h  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  dbusmenushortcut_p.h  dbusmenutypes_p.h  debug_p.h  utils.cpp
